# Project-Aletheia-V2

./: .env.docker  API_tests.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DB_seeding.ipynb  LICENSE  Modelfile  Modelfile_big_context  README.md  alembic.ini  config.py  db_models.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03224a9134f0_testing_autogeneration.py  0b5a50a473c6_create_initial_schema.py  1fbe9ebe6fb3_create_longtermmemory_table.py  2c7590dc5575_naming_convention_and_index_status.py
scripts/: setup_venv.bat  setup_venv.sh
src/back/: api.py  internal_clients.py  observability.py  system_metrics.py  timeout.py
src/back/db/: __init__.py  client.py  models.py  session.py
src/back/groq_interface/: client.py
src/back/ollama_interface/: client.py
src/controller/: main.py  prompt
src/controller/templates/: index.html
src/front/: bot.py
src/front/cogs/: aletheia.py  bets.py  ollama.py  special_message.py  voice.py
src/front/data/: bets.json  message_transformer.ipynb
src/front/data/conversations/: conversation_0.txt  conversation_1.txt  conversation_10.txt  conversation_100.txt  conversation_101.txt  conversation_102.txt  conversation_103.txt  conversation_104.txt  conversation_105.txt  conversation_106.txt  conversation_107.txt  conversation_108.txt  conversation_109.txt  conversation_11.txt  conversation_110.txt  conversation_111.txt  conversation_112.txt  (+343 more)
src/shared/: __init__.py  controller_client.py  controller_schema.py
tests/: test_api.py
(+2 files in other folders)
